<resources>
    <string name="app_name">BatikKu.</string>
    <string name="textmodel">3D Model</string>
    <string name="daerah_batik">Daerah Batik</string>
    <string name="kaos">Kaos</string>
    <string name="celana">Celana</string>
    <string name="kemeja">Kemeja</string>
    <string name="dress">Dress</string>
    <string name="pilih_motif_batik">Pilih Motif Batik</string>
    <string name="lihat_semua_daerah">Lihat Semua Daerah</string>
    <string name="kembang_kuning">Kembang kuning</string>
    <string name="deskripsi_batik1"> Batik Solo adalah salah satu ikon batik Indonesia yang sangat berpengaruh, kharismanya memukau dunia.</string>
    <string name="deskripsi_batik2"> Masyarakat Solo membuat batik secara turun temurun, melahirkan ratusan hingga ribuan motif.
</string>
    <string name="deskripsi_batik3"> Perbedaan motif dirunut ke belakang, terjadi karena motif motif ini bukan semata gambar, tapi mengandung makna yang didapat dari leluhur yang pada awalnya menganut animisme, dinamisme atau Hindu dan Buddha..</string>
</resources>
