<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp"
    tools:context=".BatikActivity">
    <RelativeLayout
        android:id="@+id/main_rl"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="0"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Detail Batik"
            android:textStyle="bold"
            android:textColor="@color/blackText"
            android:textSize="23sp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/main_rl"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/image_detail_batik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/batik_batik"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_detail_batik">
        <TextView
            android:id="@+id/nama_batik"
            android:text="Nama Batik"
            android:textStyle="bold"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/kembang_kuning"
            android:text="@string/kembang_kuning"
            android:layout_below="@+id/nama_batik"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/asal_batik"
            android:text="Asal Batik"
            android:textStyle="bold"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            android:layout_below="@+id/kembang_kuning"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/solo_jateng"
            android:text="Solo,Jawa tengah"
            android:layout_below="@+id/asal_batik"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/deskripsi_batik"
            android:text="Deskripsi Batik"
            android:textStyle="bold"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            android:layout_below="@+id/solo_jateng"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/desc1"
            android:text="@string/deskripsi_batik1"
            android:layout_below="@+id/deskripsi_batik"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/desc2"
            android:text="@string/deskripsi_batik2"
            android:layout_below="@+id/desc1"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/desc3"
            android:text="@string/deskripsi_batik3"
            android:layout_below="@+id/desc2"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>